<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.sakeanduk.www.workcard.activity.MainPageActivity">

    <RelativeLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:layout_editor_absoluteX="8dp">

        <Button
            android:id="@+id/addWords"
            android:layout_width="233dp"
            android:layout_height="63dp"
            android:layout_centerHorizontal="true"
            android:text="@string/button_addWords"
            tools:layout_editor_absoluteX="64dp"
            tools:layout_editor_absoluteY="372dp" />

        <Button
            android:id="@+id/manageWords"
            android:layout_width="233dp"
            android:layout_height="63dp"
            android:layout_below="@+id/addWords"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:text="@string/button_checkWords"
            tools:layout_editor_absoluteX="64dp"
            tools:layout_editor_absoluteY="275dp" />

        <Button
            android:id="@+id/exam"
            android:layout_width="233dp"
            android:layout_height="63dp"
            android:layout_below="@+id/manageWords"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:text="@string/button_exam"
            tools:layout_editor_absoluteX="64dp"
            tools:layout_editor_absoluteY="160dp" />

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>
